# maipharm-domae-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  domae.spec  install.bat  install.sh  pyproject.toml  requirements.txt  start.bat  update.bat
..bfg-report/2026-03-17/17-53-28/: cache-stats.txt  changed-files.txt  object-id-map.old-new.txt
.github/workflows/: release.yml
docs/: API_SPEC.md  ARCHITECTURE.md  BUSINESS_ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOY.md  DESIGN_CRAWLER_DISTRIBUTION.md  IMPLEMENTATION_PLAN.md  PHARMSQUARE_API_KEY_PLAN.md  PHARMSQUARE_TIER_DESIGN.md  PROJECT_STRUCTURE.md  TELEGRAM_REDESIGN.md  USER_GUIDE.md  WORKFLOW.md  WORKFLOW_v2.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.css  App.jsx
frontend/src/components/: FontSizeModal.jsx
frontend/src/pages/: CartPage.jsx  FavoritesPage.jsx  HistoryPage.jsx  MonitorAlertsPage.jsx  ProductsPage.jsx  SearchPage.jsx  SettingsPage.jsx  SetupPage.jsx  UrgentPage.jsx
frontend/src/utils/: cart.js  favorites.js  fontSize.js
scripts/: build_frontend.sh
src/domae_mcp/: __init__.py  __main__.py
src/domae_mcp/cloud/: __main__.py  crypto.py  notifier.py  scheduler.py  webhook.py  worker.py
src/domae_mcp/core/crawlers/: __init__.py  _client_key.py  base.py  beakje.py  (+10 more)
src/domae_mcp/desktop/: app.py  startup.py  tray.py  updater.py
src/domae_mcp/local/: api_key.py  config.py  database.py  mcp_server.py  scheduler.py  server.py  startup.py
src/domae_mcp/static/: index.html
tests/: test_crawlers.py  test_loader.py
(+29 files in other folders)
