[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maipharm-domae-mcp"
version = "1.0.0"
description = "의약품 도매 통합 검색/주문 MCP 서버"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
    "mcp>=1.0.0",
    "python-telegram-bot>=20.0",
    "sendgrid>=6.10.0",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
domae_mcp = ["static/**/*"]
